--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^3.5.1",
     "@pinia/nuxt": "^0.11.0",
     "nuxt": "^3.17.2",
     "pinia": "^3.0.2",
